# tomorrow-lab.github.io

./: .gitignore  .nojekyll  .pre-commit-config.yaml  404.html  404.qmd  README.md  _config.yml  _quarto.yml  about.html  about.markdown  about.qmd  analytics.html  book.html  book.qmd  custom.scss  google_analytics.html  index.html  index.qmd  index.xml  listings.json  pixi.toml  pixi.toml.bak  projects.html  projects.qmd  pyproject.toml  pyproject.toml.bak  resume.html  resume.qmd  search.json  sitemap.xml  styles.css  subscribe.html  theme-dark.scss  theme_dark.scss  theme_light.scss
.conda/conda-meta/: _libgcc_mutex-0.1-conda_forge.json  _openmp_mutex-4.5-2_gnu.json  bzip2-1.0.8-hd590300_5.json  ca-certificates-2024.2.2-hbcca054_0.json  history  ld_impl_linux-64-2.40-h41732ed_0.json  libexpat-2.5.0-hcb278e6_1.json  libffi-3.4.2-h7f98852_5.json  libgcc-ng-13.2.0-h807b86a_5.json  libgomp-13.2.0-h807b86a_5.json  libnsl-2.0.1-hd590300_0.json  libsqlite-3.45.1-h2797004_0.json  libuuid-2.38.1-h0b41bf4_0.json  libxcrypt-4.4.36-hd590300_1.json  libzlib-1.2.13-hd590300_5.json  ncurses-6.4-h59595ed_2.json  openssl-3.2.1-hd590300_0.json  pip-24.0-pyhd8ed1ab_0.json  python-3.11.8-hab00c5b_0_cpython.json  readline-8.2-h8228510_1.json  setuptools-69.1.1-pyhd8ed1ab_0.json  tk-8.6.13-noxft_h4845f30_101.json  tzdata-2024a-h0c530f3_0.json  wheel-0.42.0-pyhd8ed1ab_0.json  xz-5.2.6-h166bdaf_0.json
.github/workflows/: publish.yml  quarto-publish.yml
_posts/: 2023-02-17-hello.markdown  2023-02-17-welcome-to-jekyll.markdown
_site/: about.html  book.html  index.html  index.xml  listings.json  resume.html  robots.txt  search.json  sitemap.xml
_site/posts/: 240324_RDS_10x.html  R_Seurat_tutorials.html  R_ggpubr.html  learn_jupyter.html  python_StatisticalTesting.html  python_Statistics.html  python_TidyData.html  python_jupyter.html  python_pingouin.html  python_scRNA_QC.html  python_scRNA_alignment.html  tomo240324_RDS_10x.html
books/: Bioinfo_algorithm.html  Bioinfo_algorithm.qmd  Bioinfo_python_2ed.html  Bioinfo_python_2ed.qmd  Deeplearning_Biology.html  Deeplearning_Biology.qmd
portfolio/: _metadata.yml  before_2015.html  before_2015.qmd  certificates.html  certificates.qmd  clinicalwatcher.html  clinicalwatcher.qmd  collect_certification.html  collect_certification.qmd  datavisguide.html  datavisguide.qmd  footer.html  kimchi_gold.html  kimchi_gold.qmd  korean_monospace_font.html  korean_monospace_font.qmd  project_a.html  project_a.qmd  project_b.qmd  project_c.qmd  project_d.qmd  project_kimchi_gold.html  project_kimchi_gold.qmd  project_korean_programming_font.html  project_korean_programming_font.qmd  pubmed_miner.html  pubmed_miner.qmd  test.html  test.qmd
posts/: 20231023_HL187_scBestQC_Isotype.html  230919_scRNA_data_prep.ipynb  230921_HL187_clinicalTrials.ipynb  230926_mNeuron1k_QC.ipynb  231114_HL187_QC_Isotype.ipynb  231115_scBest_QC.ipynb  R_Seurat_tutorials.html  R_Seurat_tutorials.ipynb  R_ggpubr.html  R_ggpubr.ipynb  _Environment_setup.ipynb  _nikola-for-blog.ipynb  learn_jupyter.html  learn_jupyter.ipynb  python_StatisticalTesting.html  python_StatisticalTesting.ipynb  python_Statistics.html  python_Statistics.ipynb  python_TidyData.ipynb  python_jupyter.html  python_jupyter.ipynb  python_pingouin.html  python_pingouin.ipynb  python_scRNA_QC.html  python_scRNA_QC.ipynb
posts/Etc/: how_DS_works.html  lab_protocols.html  miniforge.html  prefix_pixi.html  python_TidyData.html  python_marsilea.html
posts/Others/: Env_setup.html  PARA_methods.html  PARA_methods.qmd  how_DS_works.html  lab_protocols.html  miniforge.html  prefix_pixi.html  python_StatisticalTesting.html  python_Statistics.html  python_Statistics.ipynb  python_TidyData.html  python_TidyData.ipynb  python_marsilea.html  python_marsilea.ipynb  python_pingouin.html  python_pingouin.ipynb
posts/Python/: cellranger_alignment.html  cellranger_alignment.ipynb  jupyter_notebook.html  jupyter_notebook.ipynb  scanpy_Id2symbol.html  scanpy_Id2symbol.ipynb  scanpy_QC.html  scanpy_QC.ipynb  scanpy_adata2mtx.html  scanpy_adata2mtx.ipynb  scanpy_workshop_01.html  scanpy_workshop_01.ipynb  scanpy_workshop_02.html  scanpy_workshop_02.ipynb  scanpy_workshop_03.html  scanpy_workshop_04.html  scanpy_workshop_04.ipynb  scanpy_workshop_05.ipynb  scanpy_workshop_06.ipynb
posts/R/: ggpubr.html  ggpubr.ipynb  seurat_RDS2mtx.html  seurat_RDS2mtx.ipynb  seurat_tutorials.html  seurat_tutorials.ipynb
posts/Tidydata/: python_TidyData.html  python_TidyData.ipynb
posts/drylab/: R_Seurat_tutorials.html  R_Seurat_tutorials.ipynb  R_ggpubr.html  R_ggpubr.ipynb  R_scRNA_RDS_mtx.html  R_scRNA_RDS_mtx.ipynb  python_gene_symbol.html  python_gene_symbol.ipynb  python_scRNA_AnnData_mtx.html  (+7 more)
(+564 files in other folders)
