# ref: https://beta.ruff.rs/docs/rules/
[tool.ruff]

# defaults to 88 like black
line-length = 100  

# the python version to target, useful when considering code upgrades, defaults to "py310"
target-version = "py311"  

# Linting file type
include = ["*.py", "*.ipynb"]

# Extend the `pyproject.toml` file in the parent directory.
#extend = "../pyproject.toml"

lint.select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "UP",  # pyupgrade,
  "I",   # isort
  # "B",
  "C4",
  # "N",
  "W",
  "UP",
]

lint.ignore = [
  "F403",
  "F405",
  "E501", # line length violations
  "E402", 
  "W605", # Invalid escape sequence
  "F811", # Redefinition of unused
  "F821", # Undefined name
  ]

# Allow autofix for all enabled rules (when `--fix`) is provided.
lint.fixable = ["A", "B", "C", "D", "E", "F", "I", "UP"]
lint.unfixable = []

# Allow unused variables when underscore-prefixed.
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[per-file-ignores]
# Ignore `E402` (import violations) in all `__init__.py` files, and in `path/to/file.py`.
"__init__.py" = ["E402"]
".pixi/*" = ["E"]
per-file-ignores = {}

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[project]
name = "tomorrow-lab blog"
version = "0.1.0"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.tasks]
# start = "quarto publish gh-pages"
preview = "quarto preview"
fix = "ruff check --fix ."

[tool.pixi.dependencies]
python = "==3.11"
quarto = ">=1.4.550,<1.5"
ruff = ">=0.5.5,<0.6"
jupyter = ">=1.1.1,<2"
matplotlib = ">=3.9.1,<4"
pandas = ">=2.2.3,<3"
plotly = ">=5.24.1,<6"
pixi-kernel = ">=0.5.1,<0.6"
ipykernel = ">=6.29.5,<7"
r-irkernel = ">=1.3.2,<2"
jupytext = ">=1.16.6,<2"
r-knitr = ">=1.49,<2"
r-rmarkdown = ">=2.29,<3"
