[project]
name = "tomorrow-lab-github-io"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"
include = ["*.py", "*.ipynb"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "UP",
  "I",
  "C4",
  "W",
]
ignore = [
  "F403",
  "F405",
  "E501",
  "E402",
  "W605",
  "F811",
  "F821",
]
fixable = ["A", "B", "C", "D", "E", "F", "I", "UP"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
".pixi/*" = ["E"]
".venv/*" = ["E"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.tasks]
start = "quarto publish gh-pages"
preview = "quarto preview"
fix = "ruff check --fix ."

[tool.pixi.dependencies]
python = "==3.11"
quarto = ">=1.4.550,<1.5"
ruff = ">=0.5.5,<0.6"
jupyter = ">=1.1.1,<2"
matplotlib = ">=3.9.1,<4"
pandas = ">=2.2.3,<3"
plotly = ">=5.24.1,<6"
pixi-kernel = ">=0.5.1,<0.6"
ipykernel = ">=6.29.5,<7"
r-irkernel = ">=1.3.2,<2"
jupytext = ">=1.16.6,<2"
r-knitr = ">=1.49,<2"
r-rmarkdown = ">=2.29,<3"
